# dataset-STJ-SumBR

./: .gitignore  AGENTS.md  README.md  dataset_card.md  pyproject.toml  run_overnight.sh
docs/: proximos-passos.md
src/: clean.py  export.py  fetch.py  join.py  parse.py
tests/: test_parse.py
