[project]
name = "stj-sumbr"
version = "0.1.0"
description = "Pipeline de coleta e processamento de acórdãos do STJ para dataset de sumarização"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "tqdm>=4.66",
    "datasets>=2.19",
    "tiktoken>=0.7",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "huggingface-hub>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
]
